Issue #557 - Move z-index within its container + fix regression

--- a/css/desktop-options.scss
+++ b/css/desktop-options.scss
@@ -228,8 +228,8 @@ button.add::before
 #filterlist-by-url
 {
   position: absolute;
-  /* ensures it overlaps previous z-index: 1 nodes */
-  z-index: 1;
+  /* ensures it overlaps same popout z-indexes */
+  z-index: var(--z-popout-active);
   top: -260px;
   width: 100%;
   height: 260px;
@@ -1393,12 +1393,6 @@ html[dir="rtl"] #all-filter-lists-table li.show-message .message.error::before
 #all-filter-lists-table
 {
   margin-bottom: 0.8rem;
-}
-
-/* used to ensure its inner popouts are also shown on top */
-#all-filter-lists-table .col5
-{
-  z-index: var(--z-popout);
 }
 
 /*
