--- a/css/io-list-box.scss
+++ b/css/io-list-box.scss
@@ -15,6 +15,8 @@
  * along with Adblock Plus.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+@import "z-index.scss";
+
 io-list-box
 {
   display: block;
@@ -74,6 +76,7 @@ io-list-box [role="listbox"]
 {
   overflow: auto;
   position: absolute;
+  z-index: var(--z-popout-active);
   bottom: 2.2em;
   max-height: 290px;
   box-shadow: 0 -4px 20px 0 rgba(0,0,0,0.11);
